RESOLVED FIXED216937
REGRESSION(iOS WebDriver): action chains with 'Touch' pointerType don't work on Mac
https://bugs.webkit.org/show_bug.cgi?id=216937
Summary REGRESSION(iOS WebDriver): action chains with 'Touch' pointerType don't work ...
Blaze Burg
Reported 2020-09-24 11:27:29 PDT
We need to alias Touch to Mouse like we do Mouse to Touch on iOS.
Attachments
Proposed Fix (2.02 KB, patch)
2020-09-24 13:23 PDT, Blaze Burg
no flags
Blaze Burg
Comment 1 2020-09-24 11:27:45 PDT
Blaze Burg
Comment 2 2020-09-24 13:23:08 PDT
Created attachment 409616 [details] Proposed Fix
EWS
Comment 3 2020-09-24 14:36:49 PDT
Committed r267545: <https://trac.webkit.org/changeset/267545> All reviewed patches have been landed. Closing bug and clearing flags on attachment 409616 [details].
Blaze Burg
Comment 4 2020-10-27 08:07:31 PDT
*** Bug 218232 has been marked as a duplicate of this bug. ***
Blaze Burg
Comment 5 2020-11-04 11:18:35 PST
*** Bug 218563 has been marked as a duplicate of this bug. ***
Note You need to log in before you can comment on or make changes to this bug.