REGRESSION(iOS WebDriver): action chains with 'Touch' pointerType don't work on Mac https://bugs.webkit.org/show_bug.cgi?id=216937 <rdar://problem/69149171>

Reviewed by Darin Adler.

Before iOS WebDriver shipped, 'Touch' was unconditionally aliased to 'Mouse.'
Make sure the aliasing happens for macOS so the command doesn't fail frivolously.

* UIProcess/Automation/WebAutomationSession.cpp:
(WebKit::WebAutomationSession::performInteractionSequence):
Alias 'Touch' to 'Mouse' when touch is not available and mouse is.
This is the case for macOS.


Canonical link: https://commits.webkit.org/229727@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@267545 268f45cc-cd09-0410-ab3c-d52691b4dbfc